<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/lnPrincipal"
    tools:context=".MainActivity">

    <LinearLayout
        style="@style/lnAN">

        <TextView
            android:id="@+id/txtNombre"
            style="@style/txtAN"
            android:text="@string/txtNombre"
            android:fontFamily="@font/Crochet"
            />

        <EditText
            android:id="@+id/lblNombre"
            style="@style/lblAN"
            android:hint="@string/lblNombre"
            android:inputType="textPersonName"
            android:fontFamily="@font/Crochet"

            />

    </LinearLayout>

    <LinearLayout
        style="@style/lnAN">

        <TextView
            android:id="@+id/txtApellido"
            style="@style/txtAN"
            android:text="@string/txtApellido"
            android:fontFamily="@font/Crochet"
             />

        <EditText
            android:id="@+id/lblApellido"
            style="@style/lblAN"
            android:hint="@string/lblApellido"
            android:fontFamily="@font/Crochet"
            />
    </LinearLayout>

    <LinearLayout
     style="@style/lnAD">

        <TextView
            android:id="@+id/txtEdad"
            style="@style/txtAD"
            android:text="@string/txtEdad"
            android:fontFamily="@font/Crochet"
             />

        <EditText
            android:id="@+id/lblEdad"
            style="@style/lblAD"
          />
    </LinearLayout>

    <LinearLayout
      style="@style/lnSP">

        <TextView
            android:id="@+id/txtCivil"
            style="@style/txt1SP"
            android:text="@string/txtCivil"
            android:fontFamily="@font/Crochet"
             />

        <Spinner
            android:id="@+id/spCivil"
           style="@style/lbl1SP"
            />
    </LinearLayout>

    <LinearLayout
      style="@style/lnRD">

        <TextView
            android:id="@+id/txtGen"
            style="@style/txt2RD"
            android:text="@string/txtGen"
            android:fontFamily="@font/Crochet"
             />

        <RadioGroup
            android:id="@+id/radiogroup"
            style="@style/RG"
           >

            <RadioButton
                android:id="@+id/radioM"
                style="@style/RB"
                android:text="@string/radioM"
                android:fontFamily="@font/Crochet"/>

            <RadioButton
                android:id="@+id/radioH"
                style="@style/RB"
                android:text="@string/radioH"
                android:fontFamily="@font/Crochet"/>

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        style="@style/lnSP"
                >
        <TextView
            android:id="@+id/txtHijos"
            style="@style/txtSW"
            android:text="@string/txtHijos"
            android:fontFamily="@font/Crochet"

             />

        <Switch
            android:id="@+id/switchHijos"
           style="@style/SW"
            android:text="@string/sino"
            android:fontFamily="@font/Crochet"/>

    </LinearLayout>

    <LinearLayout
      style="@style/lnRD">

        <Button
            android:id="@+id/buttonGenerar"
           style="@style/BT"
            android:text="@string/buttonGenerar"
            android:fontFamily="@font/Crochet"/>

        <ImageButton
            android:id="@+id/buttonBorrar"
            style="@style/BT"
            app:srcCompat="@android:drawable/ic_menu_delete" />

    </LinearLayout>

    <LinearLayout
       style="@style/lnRD">

        <TextView
           style="@style/txtFinal" />
    </LinearLayout>
</LinearLayout>